# cmake-gtest-template

./: .clang-format  .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/sample_app/: CMakeLists.txt
apps/sample_app/src/c/: main.c
apps/sample_app/src/main/cpp/: main.cpp
apps/sample_app/src/main_lib/cpp/: app_main.cpp
apps/sample_app/src/main_lib/include/sample_app/: app_main.h
libs/: CMakeLists.txt
libs/py_ext_lib/: CMakeLists.txt
libs/py_ext_lib/src/cpp/: py_ext_lib.cpp
libs/sample_lib/: CMakeLists.txt
libs/sample_lib/src/c/: sample.c
libs/sample_lib/src/cpp/: sample.cpp
libs/sample_lib/src/include/sample_lib/: sample.h
tests/: CMakeLists.txt
tests/sample_app_test/: CMakeLists.txt
tests/sample_app_test/src/cpp/: sample_app_test.cpp
tests/sample_lib_test/: CMakeLists.txt
tests/sample_lib_test/src/cpp/: sample_lib_test.cpp
